package factorymethod;

public interface Pedido {

    void entregar();

}